@@ -13,6 +13,7 @@
 .fa-classic,
 .fa-sharp,
 .fas,
+DIV.val-info::before,
 DIV.val-warn::before,
 DIV.val-error::before,
 .fa-solid,
@@ -29,7 +30,7 @@ DIV.val-error::before,
   text-rendering: auto;
 }
 
-.fas, DIV.val-warn::before, DIV.val-error::before,
+.fas, DIV.val-info::before, DIV.val-warn::before, DIV.val-error::before,
 .fa-classic,
 .fa-solid,
 .far,
@@ -42,7 +43,7 @@ DIV.val-error::before,
   font-family: "Font Awesome 6 Brands";
 }
 
-DIV.val-warn::before, DIV.val-error::before {
+DIV.val-info::before, DIV.val-warn::before, DIV.val-error::before {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: inline-block;
@@ -8253,7 +8254,7 @@ readers do not read off random characters that represent icons */
   font-display: block;
   src: url("/fontawesome-free-6.5.1-web/webfonts/fa-solid-900.woff2") format("woff2"), url("/fontawesome-free-6.5.1-web/webfonts/fa-solid-900.ttf") format("truetype");
 }
-.fas, DIV.val-warn::before, DIV.val-error::before,
+.fas, DIV.val-info::before, DIV.val-warn::before, DIV.val-error::before,
 .fa-solid {
   font-weight: 900;
 }
@@ -20499,7 +20500,14 @@ DIV.val-warn {
   color: var(--bs-warning);
 }
 DIV.val-warn::before {
-  content: "\f071" " ";
+  content: "\f057" " ";
+}
+
+DIV.val-info {
+  color: var(--bs-info);
+}
+DIV.val-info::before {
+  content: "\f0a1" " ";
 }
 
 /*# sourceMappingURL=open-console.css.map */
